working on bootstrap

--- a/week-08/day-2/Project with MySQL/build.gradle
+++ b/week-08/day-2/Project with MySQL/build.gradle
@@ -20,4 +20,6 @@ dependencies {
     runtimeOnly 'org.springframework.boot:spring-boot-devtools'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     compile 'mysql:mysql-connector-java:8.0.16'
+    compile group: 'org.webjars', name: 'bootstrap', version: '4.3.1'
+    compile group: 'org.webjars.bower', name: 'jquery', version: '3.4.1'
 }
