--- a/week-08/day-5/build.gradle
+++ b/week-08/day-5/build.gradle
@@ -25,5 +25,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
+    runtimeOnly 'mysql:mysql-connector-java'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    compile 'mysql:mysql-connector-java'
+    compile group: 'org.webjars’, name: ‘bootstrap’, version: '4.3.1'
+    compile group: 'org.webjars.bower', name: 'jquery', version: '3.4.1'
 }
